--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -51,6 +51,17 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
   - 01A6:ODO
+  - DB33.0103:FUELSYS1,FUELSYS2
+  - DB33.010F:IAT
+  - DB33.0110:MAF
+  - DB33.012F:FLI
+  - DB33.0131:CLR_DIST
+  - DB33.0142:VPWR
+  - DB33.0146:AAT
+  - DB33.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - DB33.019E:EXH_RATE
+  - DB33.01A6:ODO
 unsupported_commands_by_ecu:
   7E0:
   - 7E0.7E8.22000D:GMC_VSS
