Update command data for GMC/Yukon XL

--- a/tests/test_cases/2013/command_support.yaml
+++ b/tests/test_cases/2013/command_support.yaml
@@ -1,6 +1,6 @@
 model_year: 2013
 supported_commands_by_ecu:
-  7E0:
+  "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -20,6 +20,8 @@ supported_commands_by_ecu:
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0114:O2S11,SHRTFT11
   - 0115:O2S12,SHRTFT11
+  - 0118:O2S21,SHRTFT21
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -43,10 +45,175 @@ supported_commands_by_ecu:
   - 014C:TAC_PCT
   - 0151:FUEL_TYP
   - 0152:ALCH_PCT
-  7E2:
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.0110:MAF
+  - 7E0.0111:TP
+  - 7E0.0131:CLR_DIST
+  - 7E0.0144:EQ_RAT
+  - 7E0.0145:TP_R
+  - 7E0.0147:TP_B
+  - 7E0.2211A1:GMC_RUNTM
+  - 7E0.7E8.22000D:GMC_VSS
+  "7E2":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
-  7E3:
+  "7E3":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010A:FP
   - 0142:VPWR
+unsupported_commands_by_ecu:
+  "760":
+  - 760.760.224051:GMC_VSS_FL
+  - 760.760.224052:GMC_VSS_FR
+  - 760.760.224053:GMC_VSS_RL
+  - 760.760.224054:GMC_VSS_RR
+  "7E0":
+  - 7E0.7E8.22248E:GMC_TP_FL
+  - 7E0.7E8.22248F:GMC_TP_FR
+  - 7E0.7E8.222490:GMC_TP_RR
+  - 7E0.7E8.222491:GMC_TP_RL
+  - 7E0.7E8.22C901:GMC_TP_P1,GMC_TP_P2,GMC_TP_P3,GMC_TP_P4
+  - 7E0.7E8.22C902:GMC_TP_T1,GMC_TP_T2,GMC_TP_T3,GMC_TP_T4
+  "7E4":
+  - 7E4.7EC.22434F:GMC_HVBAT_TEMP
+  - 7E4.7EC.224368:GMC_CHARGE_AC_VOLT
+  - 7E4.7EC.224369:GMC_CHARGE_AC_CURR
+  - 7E4.7EC.22436B:GMC_CHARGE_HV_VOLT
+  - 7E4.7EC.22436C:GMC_CHARGE_HV_CURR
+  - 7E4.7EC.224373:GMC_CHARGE_MODE
+  - 7E4.7EC.2243A5:GMC_HVBAT_CHRG_CNT
+  - 7E4.7EC.2243AF:GMC_HVBAT_SOC_RAW
+  - 7E4.7EC.224531:GMC_CHARGE_LVL
+  - 7E4.7EC.228334:GMC_HVBAT_SOC_DISPLAY
+  "7E7":
+  - 7E7.7EF.224181:GMC_HVBAT_CMU01_VOLT
+  - 7E7.7EF.224182:GMC_HVBAT_CMU02_VOLT
+  - 7E7.7EF.224183:GMC_HVBAT_CMU03_VOLT
+  - 7E7.7EF.224184:GMC_HVBAT_CMU04_VOLT
+  - 7E7.7EF.224185:GMC_HVBAT_CMU05_VOLT
+  - 7E7.7EF.224186:GMC_HVBAT_CMU06_VOLT
+  - 7E7.7EF.224187:GMC_HVBAT_CMU07_VOLT
+  - 7E7.7EF.224188:GMC_HVBAT_CMU08_VOLT
+  - 7E7.7EF.224189:GMC_HVBAT_CMU09_VOLT
+  - 7E7.7EF.22418A:GMC_HVBAT_CMU10_VOLT
+  - 7E7.7EF.22418B:GMC_HVBAT_CMU11_VOLT
+  - 7E7.7EF.22418C:GMC_HVBAT_CMU12_VOLT
+  - 7E7.7EF.22418D:GMC_HVBAT_CMU13_VOLT
+  - 7E7.7EF.22418E:GMC_HVBAT_CMU14_VOLT
+  - 7E7.7EF.22418F:GMC_HVBAT_CMU15_VOLT
+  - 7E7.7EF.224190:GMC_HVBAT_CMU16_VOLT
+  - 7E7.7EF.224191:GMC_HVBAT_CMU17_VOLT
+  - 7E7.7EF.224192:GMC_HVBAT_CMU18_VOLT
+  - 7E7.7EF.224193:GMC_HVBAT_CMU19_VOLT
+  - 7E7.7EF.224194:GMC_HVBAT_CMU20_VOLT
+  - 7E7.7EF.224195:GMC_HVBAT_CMU21_VOLT
+  - 7E7.7EF.224196:GMC_HVBAT_CMU22_VOLT
+  - 7E7.7EF.224197:GMC_HVBAT_CMU23_VOLT
+  - 7E7.7EF.224198:GMC_HVBAT_CMU24_VOLT
+  - 7E7.7EF.224199:GMC_HVBAT_CMU25_VOLT
+  - 7E7.7EF.22419A:GMC_HVBAT_CMU26_VOLT
+  - 7E7.7EF.22419B:GMC_HVBAT_CMU27_VOLT
+  - 7E7.7EF.22419C:GMC_HVBAT_CMU28_VOLT
+  - 7E7.7EF.22419D:GMC_HVBAT_CMU29_VOLT
+  - 7E7.7EF.22419E:GMC_HVBAT_CMU30_VOLT
+  - 7E7.7EF.22419F:GMC_HVBAT_CMU31_VOLT
+  - 7E7.7EF.224200:GMC_HVBAT_CMU32_VOLT
+  - 7E7.7EF.224201:GMC_HVBAT_CMU33_VOLT
+  - 7E7.7EF.224202:GMC_HVBAT_CMU34_VOLT
+  - 7E7.7EF.224203:GMC_HVBAT_CMU35_VOLT
+  - 7E7.7EF.224204:GMC_HVBAT_CMU36_VOLT
+  - 7E7.7EF.224205:GMC_HVBAT_CMU37_VOLT
+  - 7E7.7EF.224206:GMC_HVBAT_CMU38_VOLT
+  - 7E7.7EF.224207:GMC_HVBAT_CMU39_VOLT
+  - 7E7.7EF.224208:GMC_HVBAT_CMU40_VOLT
+  - 7E7.7EF.224209:GMC_HVBAT_CMU41_VOLT
+  - 7E7.7EF.22420A:GMC_HVBAT_CMU42_VOLT
+  - 7E7.7EF.22420B:GMC_HVBAT_CMU43_VOLT
+  - 7E7.7EF.22420C:GMC_HVBAT_CMU44_VOLT
+  - 7E7.7EF.22420D:GMC_HVBAT_CMU45_VOLT
+  - 7E7.7EF.22420E:GMC_HVBAT_CMU46_VOLT
+  - 7E7.7EF.22420F:GMC_HVBAT_CMU47_VOLT
+  - 7E7.7EF.224210:GMC_HVBAT_CMU48_VOLT
+  - 7E7.7EF.224211:GMC_HVBAT_CMU49_VOLT
+  - 7E7.7EF.224212:GMC_HVBAT_CMU50_VOLT
+  - 7E7.7EF.224213:GMC_HVBAT_CMU51_VOLT
+  - 7E7.7EF.224214:GMC_HVBAT_CMU52_VOLT
+  - 7E7.7EF.224215:GMC_HVBAT_CMU53_VOLT
+  - 7E7.7EF.224216:GMC_HVBAT_CMU54_VOLT
+  - 7E7.7EF.224217:GMC_HVBAT_CMU55_VOLT
+  - 7E7.7EF.224218:GMC_HVBAT_CMU56_VOLT
+  - 7E7.7EF.224219:GMC_HVBAT_CMU57_VOLT
+  - 7E7.7EF.22421A:GMC_HVBAT_CMU58_VOLT
+  - 7E7.7EF.22421B:GMC_HVBAT_CMU59_VOLT
+  - 7E7.7EF.22421C:GMC_HVBAT_CMU60_VOLT
+  - 7E7.7EF.22421D:GMC_HVBAT_CMU61_VOLT
+  - 7E7.7EF.22421E:GMC_HVBAT_CMU62_VOLT
+  - 7E7.7EF.22421F:GMC_HVBAT_CMU63_VOLT
+  - 7E7.7EF.224220:GMC_HVBAT_CMU64_VOLT
+  - 7E7.7EF.224221:GMC_HVBAT_CMU65_VOLT
+  - 7E7.7EF.224222:GMC_HVBAT_CMU66_VOLT
+  - 7E7.7EF.224223:GMC_HVBAT_CMU67_VOLT
+  - 7E7.7EF.224224:GMC_HVBAT_CMU68_VOLT
+  - 7E7.7EF.224225:GMC_HVBAT_CMU69_VOLT
+  - 7E7.7EF.224226:GMC_HVBAT_CMU70_VOLT
+  - 7E7.7EF.224227:GMC_HVBAT_CMU71_VOLT
+  - 7E7.7EF.224228:GMC_HVBAT_CMU72_VOLT
+  - 7E7.7EF.224229:GMC_HVBAT_CMU73_VOLT
+  - 7E7.7EF.22422A:GMC_HVBAT_CMU74_VOLT
+  - 7E7.7EF.22422B:GMC_HVBAT_CMU75_VOLT
+  - 7E7.7EF.22422C:GMC_HVBAT_CMU76_VOLT
+  - 7E7.7EF.22422D:GMC_HVBAT_CMU77_VOLT
+  - 7E7.7EF.22422E:GMC_HVBAT_CMU78_VOLT
+  - 7E7.7EF.22422F:GMC_HVBAT_CMU79_VOLT
+  - 7E7.7EF.224230:GMC_HVBAT_CMU80_VOLT
+  - 7E7.7EF.224231:GMC_HVBAT_CMU81_VOLT
+  - 7E7.7EF.224232:GMC_HVBAT_CMU82_VOLT
+  - 7E7.7EF.224233:GMC_HVBAT_CMU83_VOLT
+  - 7E7.7EF.224234:GMC_HVBAT_CMU84_VOLT
+  - 7E7.7EF.224235:GMC_HVBAT_CMU85_VOLT
+  - 7E7.7EF.224236:GMC_HVBAT_CMU86_VOLT
+  - 7E7.7EF.224237:GMC_HVBAT_CMU87_VOLT
+  - 7E7.7EF.224238:GMC_HVBAT_CMU88_VOLT
+  - 7E7.7EF.224239:GMC_HVBAT_CMU89_VOLT
+  - 7E7.7EF.22423A:GMC_HVBAT_CMU90_VOLT
+  - 7E7.7EF.22423B:GMC_HVBAT_CMU91_VOLT
+  - 7E7.7EF.22423C:GMC_HVBAT_CMU92_VOLT
+  - 7E7.7EF.22423D:GMC_HVBAT_CMU93_VOLT
+  - 7E7.7EF.22423E:GMC_HVBAT_CMU94_VOLT
+  - 7E7.7EF.22423F:GMC_HVBAT_CMU95_VOLT
+  - 7E7.7EF.224240:GMC_HVBAT_CMU96_VOLT
+  "DA11":
+  - DA11.220010|fc=1,c=14:GMC_MAF
+  - DA11.22002F|fc=1,c=14:GMC_AUX_V,GMC_FLI
+  - DA11.22005E|fc=1,c=14:GMC_FUEL_RATE
+  - DA11.2211EA|fc=1,c=14:GMC_MIS_5
+  - DA11.2211EB|fc=1,c=14:GMC_MIS_6
+  - DA11.221205|fc=1,c=14:GMC_MIS_2
+  - DA11.221206|fc=1,c=14:GMC_MIS_1
+  - DA11.221207|fc=1,c=14:GMC_MIS_3
+  - DA11.221208|fc=1,c=14:GMC_MIS_4
+  - DA11.22153E|fc=1,c=14:GMC_EOT
+  - DA11.2220E3|fc=1,c=14:GMC_BP_ACT
+  - DA11.222344|fc=1,c=14:GMC_EO_AP
+  - DA11.222345|fc=1,c=14:GMC_EOP_ACT
+  - DA11.2234D8|fc=1,c=14:GMC_DPF_PRESS
+  - DA11.2236A7|fc=1,c=14:GMC_AIRFILT_LIFE
+  - DA11.224DC0|fc=1,c=14:GMC_EOL
+  "DA18":
+  - DA18.221940|fc=1,c=14:GMC_TFT
+  - DA18.221B30|fc=1,c=14:GMC_GEAR
+  "DA1A":
+  - DA1A.22448F|fc=1,c=14:GMC_ODO
+  "DA1D":
+  - DA1D.2233E5:GMC_HVBAT_V
+  "DA28":
+  - DA28.224A7A|fc=1,c=14:GMC_TIRE_FL_VSS,GMC_TIRE_FR_VSS,GMC_TIRE_RL_VSS,GMC_TIRE_RR_VSS
+  - DA28.224A7C|fc=1,c=14:GMC_BP
+  - DA28.224C2D|fc=1,c=14:GMC_STEER_ANGLE
+  - DA28.224C2F|fc=1,c=14:GMC_LAT_G
+  - DA28.224C30|fc=1,c=14:GMC_LNG_G
+  "DACB":
+  - DACB.2227C6:GMC_SOC_HD
+  - DACB.222AF5:GMC_HVBAT_C_V_AVG,GMC_HVBAT_C_V_MAX,GMC_HVBAT_C_V_MIN
+  - DACB.222B43:GMC_SOC
