--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,6 +1,6 @@
 model_year: 2021
 supported_commands_by_ecu:
-  DB33:
+  "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -63,7 +63,7 @@ supported_commands_by_ecu:
   - DB33.019E:EXH_RATE
   - DB33.01A6:ODO
 unsupported_commands_by_ecu:
-  7E0:
+  "7E0":
   - 7E0.7E8.22000D:GMC_VSS
   - 7E0.7E8.22248E:GMC_TP_FL
   - 7E0.7E8.22248F:GMC_TP_FR
@@ -71,7 +71,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.222491:GMC_TP_RL
   - 7E0.7E8.22C901:GMC_TP_P1,GMC_TP_P2,GMC_TP_P3,GMC_TP_P4
   - 7E0.7E8.22C902:GMC_TP_T1,GMC_TP_T2,GMC_TP_T3,GMC_TP_T4
-  7E4:
+  "7E4":
   - 7E4.7EC.22434F:GMC_HVBAT_TEMP
   - 7E4.7EC.224368:GMC_CHARGE_AC_VOLT
   - 7E4.7EC.224369:GMC_CHARGE_AC_CURR
@@ -82,7 +82,7 @@ unsupported_commands_by_ecu:
   - 7E4.7EC.2243AF:GMC_HVBAT_SOC_RAW
   - 7E4.7EC.224531:GMC_CHARGE_LVL
   - 7E4.7EC.228334:GMC_HVBAT_SOC_DISPLAY
-  7E7:
+  "7E7":
   - 7E7.7EF.224181:GMC_HVBAT_CMU01_VOLT
   - 7E7.7EF.224182:GMC_HVBAT_CMU02_VOLT
   - 7E7.7EF.224183:GMC_HVBAT_CMU03_VOLT
@@ -179,9 +179,9 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.22423E:GMC_HVBAT_CMU94_VOLT
   - 7E7.7EF.22423F:GMC_HVBAT_CMU95_VOLT
   - 7E7.7EF.224240:GMC_HVBAT_CMU96_VOLT
-  DA1D:
+  "DA1D":
   - DA1D.2233E5:GMC_HVBAT_V
-  DACB:
+  "DACB":
   - DACB.2227C6:GMC_SOC_HD
   - DACB.222AF5:GMC_HVBAT_C_V_AVG,GMC_HVBAT_C_V_MAX,GMC_HVBAT_C_V_MIN
   - DACB.222B43:GMC_SOC
