--- a/tests/test_cases/2021/commands/DB33.012F.yaml
+++ b/tests/test_cases/2021/commands/DB33.012F.yaml
@@ -1,8 +1,8 @@
 command_id: DB33.012F
 test_cases:
-- response: 18DAF11103412F5A
-  expected_values:
+- expected_values:
     FLI: 35.29412
-- response: 18DAF11103412FFE
-  expected_values:
+  response: 18DAF11103412F5A
+- expected_values:
     FLI: 99.60784
+  response: 18DAF11103412FFE
