--- a/tests/test_cases/2021/commands/DB33.019E.yaml
+++ b/tests/test_cases/2021/commands/DB33.019E.yaml
@@ -1,5 +1,5 @@
 command_id: DB33.019E
 test_cases:
-- response: 18DAF11104419E061D
-  expected_values:
+- expected_values:
     EXH_RATE: 313
+  response: 18DAF11104419E061D
