Update GMC Yukon XL generations: Add Wikipedia reference and update README
- Added references array to generations.yaml with Chevrolet Suburban Wikipedia URL
- Updated README.md with standard template for vehicle documentation
- Verified generational data matches Wikipedia platform timeline (GMT800, GMT900, K2XX, T1XX)

--- a/generations.yaml
+++ b/generations.yaml
@@ -1,3 +1,6 @@
+references:
+  - "https://en.wikipedia.org/wiki/Chevrolet_Suburban"
+
 generations:
   - name: "First Generation (as Suburban)"
     start_year: 1937
